--- a/vue/src/scss/common.scss
+++ b/vue/src/scss/common.scss
@@ -2,3 +2,13 @@
   color: #ffffff !important;
   background-color: #f4c41f !important;
 }
+
+.no-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.verti_combi {
+  overflow: scroll;
+  white-space: nowrap;
+  display: flex;
+}
